@@ -1,3 +1,7 @@
+2012-04-25  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-11-08
+        * Change to filling RMS plots in post processing.
+
 2012-04-20  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-11-07
         * JobOptions update.
